<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.addprescriptions.AddNewPrescription">

    <data>

        <variable
            name="viewModel"
            type="com.rememed.rememed.ui.addprescriptions.AddNewPrescriptionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include"
            layout="@layout/toolbar1" />

        <TextView
            android:id="@+id/tvMedicament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/medicament"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <Spinner
            android:id="@+id/spnMedicaments"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMedicament" />

        <TextView
            android:id="@+id/tvDose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dose"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnMedicaments" />

        <EditText
            android:id="@+id/etnDose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/spnDose"
            app:layout_constraintStart_toStartOf="@+id/tvDose"
            app:layout_constraintTop_toBottomOf="@+id/tvDose" />

        <Spinner
            android:id="@+id/spnDose"
            android:layout_width="164dp"
            android:layout_height="45dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/tvDose"
            app:layout_constraintTop_toBottomOf="@+id/tvDose" />

        <TextView
            android:id="@+id/tvPerWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/times_per_week"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/etnDose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etnDose" />


        <Spinner
            android:id="@+id/spnPerWeek"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/tvPerWeek"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tvPerWeek"
            app:layout_constraintTop_toBottomOf="@+id/tvPerWeek" />

        <TextView
            android:id="@+id/tvDaysStarting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/starting_day"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/spnDose"
            app:layout_constraintStart_toStartOf="@+id/spnDose"
            app:layout_constraintTop_toBottomOf="@+id/spnDose" />

        <Spinner
            android:id="@+id/spnDaysOfWeek"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvDaysStarting"
            app:layout_constraintTop_toBottomOf="@+id/tvDaysStarting" />

        <TextView
            android:id="@+id/tvHoursInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/time_interval"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="@+id/spnPerWeek"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spnPerWeek" />

        <EditText
            android:id="@+id/etnHoras"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/tvHoursInterval"
            app:layout_constraintStart_toStartOf="@+id/tvHoursInterval"
            app:layout_constraintTop_toBottomOf="@+id/tvHoursInterval" />

        <TextView
            android:id="@+id/tvFood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/with_food"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etnHoras" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFood"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipYes"
                style="@style/CustomChip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/yes" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipNo"
                style="@style/CustomChip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no" />

        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/tvHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/starting_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spnDaysOfWeek"
            app:layout_constraintTop_toBottomOf="@+id/spnDaysOfWeek" />


        <EditText
            android:id="@+id/etTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/choose_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHours"
            app:layout_constraintTop_toBottomOf="@+id/tvHours" />

        <android.widget.Button
            android:id="@+id/btnAddNewPrescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_button2"
            android:padding="10dp"
            android:text="@string/add_prescription"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>